# ultratube

./: .gitignore  Current State security and arch report and next steps.md  README.md  app_messages.py  app_screens.py  app_utils.py  app_workers.py  bucket_tab.py  design.md  download_service.py  download_tab.py  file_service.py  messages.py  metadata_service.py  models.py  pyproject.toml  queue_panel.py  requirements.txt  settings_screen.py  settings_service.py  sprints_and_tickets.md  test_bucket.py  tui_menu_messages.md  ultratube-plantuml.txt  ultratube.tcss  ultratube_app.py  ultratube_extractor.py  ultratube_main.py  ultratube_user_stories.md
.agents/rules/: AI coding agent RULES.md.md  caveman-activate.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json  pyrefly_report.txt
tests/: test_app.py  test_bucket.py  test_extractor.py  test_models.py  test_services.py
