[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project]
name = "ultratube"
version = "2.0.0"
description = "A Text User Interface (TUI) YouTube & Media Downloader"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "UltraTube Developer" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "yt-dlp>=2024.11.18",
    "static-ffmpeg>=2.5",
    "textual>=0.80.0",
    "rich>=13.9.0",
]

[project.scripts]
ultratube = "ultratube_app:main"
